# ChangeLog for media-sound/amarok
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/amarok/ChangeLog,v 1.143 2006/06/18 22:14:29 flameeyes Exp $

*amarok-1.4.1_beta1 (18 Jun 2006)

  18 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
  +amarok-1.4.1_beta1.ebuild:
  Add new version (beta).

*amarok-1.4.0a-r1 (18 Jun 2006)

  18 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/amarok-1.4.0a-strict-aliasing.patch, +amarok-1.4.0a-r1.ebuild:
  Add patch to fix strict-aliasing breakage.

  08 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> amarok-1.4.0a.ebuild:
  Update description line for 1.4.0a ebuild as now it's Amarok rather than
  amaroK.

  28 May 2006; Diego Pettenò <flameeyes@gentoo.org> amarok-1.3.8.ebuild,
  amarok-1.4.0a.ebuild:
  Fix libvisual-plugins dependency on the 0.2 slot.

  25 May 2006; Diego Pettenò <flameeyes@gentoo.org> amarok-1.4.0a.ebuild:
  Remove xx value for translation.

  24 May 2006; Diego Pettenò <flameeyes@gentoo.org> amarok-1.4.0a.ebuild:
  Add ~x86-fbsd keyword.

*amarok-1.4.0a (18 May 2006)

  18 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  -files/amarok-1.4.0-audiocd.patch, -files/amarok-1.4.0-collectiondb.patch,
  -amarok-1.4.0-r2.ebuild, +amarok-1.4.0a.ebuild:
  New upstream release to fix issues when migrating from 1.3 version, should
  also fix bug #133647.

*amarok-1.4.0-r2 (16 May 2006)

  16 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/amarok-1.4.0-collectiondb.patch, -amarok-1.4.0-r1.ebuild,
  +amarok-1.4.0-r2.ebuild:
  Add patch to fix leaks on connection db.

*amarok-1.4.0-r1 (15 May 2006)

  15 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/amarok-1.4.0-audiocd.patch, -amarok-1.4.0.ebuild,
  +amarok-1.4.0-r1.ebuild:
  Add patch from Markus Kaufhold in KDE bug #127388 to fix audiocd playing
  with xine engine.

  15 May 2006; Diego Pettenò <flameeyes@gentoo.org> amarok-1.4.0.ebuild:
  Force usage of gentoo mirrors.
