@@ -1,0 +1,3 @@
+MD5 4ed6e766541c4227d1d8c8eb93d0b891 amarok-1.4.1.tar.bz2 13509939
+RMD160 d9df29c2a2a7b81aabb73c66b83190f0bc109094 amarok-1.4.1.tar.bz2 13509939
+SHA256 dbe4397d041a77f7ded063f50d5cfd2faf0e9efce9b4483589f751c20ff89ccd amarok-1.4.1.tar.bz2 13509939
